[package]
name = "game1"
version = "0.1.0"
edition = "2021"

[dependencies]
frenderer = {version="0.9"}
winit = "0.29"
image = {version="0.24.7", features=["png"]}
assets_manager = { version = "0.11", features = ["png", "hot-reloading", "embedded"] }
rand = "0.8"
engine = {path="../engine"} #add to game2 and game3

[features]
default = []
webgl = ["frenderer/webgl"]
